# qat_fl

./: .gitignore  QAT.md  README.md  pyproject.toml  requirements.txt  train.py
configs/: ciciot_csv_qat.yaml  ciciot_csv_qat_kaggle.yaml  ciciot_npy_qat.yaml  ciciot_npy_qat_kaggle.yaml  synthetic_qat.yaml
qat_fl/: __init__.py
qat_fl/data/: ciciot_csv_dataloader.py  ciciot_npy_dataloader.py  partition.py
qat_fl/fl/: client.py  fedavg.py  server.py  trainer.py
qat_fl/models/: cnn_mnist.py  dcnn_bilstm.py  registry.py
qat_fl/quantization/: adaptive_bits.py  fake_quant.py  lloyd_max.py  ste.py  uniform.py
qat_fl/utils/: metrics.py
scripts/: prepare_ciciot_npy_dataset.py
tests/: test_ciciot_csv_loader.py  test_ciciot_npy_loader.py  test_client_delta_contract.py  test_dcnn_bilstm.py  test_fake_quant.py  test_fedavg_delta.py  test_uniform_quantization.py
